package org.adsl.shared.model;

/**
 * String constants used to compose the {@code typeLabel} and {@code effectsLabel}
 * fields of {@code CardDTO}. The client TUI/GUI renders these tokens as icons
 * or formatted text. Using constants here instead of raw strings keeps the
 * server model and client rendering in sync.
 */
public final class CardToken {
    private CardToken() {}

    // Type tokens
    public static final String BUILDING  = "[BUILDING]";
    public static final String HUNTER    = "[HUNTER]";
    public static final String GATHERER  = "[GATHERER]";
    public static final String BUILDER   = "[BUILDER]";
    public static final String SHAMAN    = "[SHAMAN]";
    public static final String ARTIST    = "[ARTIST]";
    public static final String INVENTOR  = "[INVENTOR]";
    public static final String HUNT      = "[HUNT]";
    public static final String SUSTENANCE = "[SUSTENANCE]";
    public static final String RITUAL    = "[RITUAL]";
    public static final String PAINTINGS = "[PAINTINGS]";

    // Effect tokens
    public static final String PP           = "[PP]";
    public static final String SHAMAN_STAR  = "[SHAMAN_STAR]";
    public static final String FOOD_COST  = "[FOOD_COST]";
    public static final String FOOD       = "[FOOD]";
    public static final String MEAT       = "[MEAT]";
    public static final String SET        = "[SET]";
    public static final String ENDGAME    = "[ENDGAME]";
    public static final String EXTRA_MOVE = "[EXTRA_MOVE]";
    public static final String TOTEM      = "[TOTEM]";
    public static final String SHIELD     = "[SHIELD]";

    // Inventor icon tokens
    public static final String ICON_BOAT     = "[ICON_BOAT]";
    public static final String ICON_SPEAR    = "[ICON_SPEAR]";
    public static final String ICON_HOOK     = "[ICON_HOOK]";
    public static final String ICON_NECKLACE = "[ICON_NECKLACE]";
    public static final String ICON_BOWL     = "[ICON_BOWL]";
    public static final String ICON_ROPE     = "[ICON_ROPE]";
    public static final String ICON_FLUTE    = "[ICON_FLUTE]";
    public static final String ICON_LEATHER  = "[ICON_LEATHER]";
    public static final String ICON_BREAD    = "[ICON_BREAD]";
}
